MyDemoOrg/force-app/main/default/objects/BBCRM__Presentation__c/BBCRM__Presentation__c.object-meta.xml
<CustomObject>
    <label>BuzzBoard Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BuzzBoard Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>