MyDemoOrg/force-app/main/default/objects/BBCRM__Presentation__c/fields/BBCRM__AccountPresentation__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__AccountPresentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountPresentation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Presentations</relationshipName>
    <type>Lookup</type>
</CustomField>