MyDemoOrg/force-app/main/default/objects/BBCRM__Presentation__c/fields/BBCRM__BuzzScore__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzScore__c</fullName>
    <label>BuzzScore</label>
    <length>20</length>
    <type>Text</type>
</CustomField>