MyDemoOrg/force-app/main/default/objects/BBCRM__Presentation__c/fields/BBCRM__LeadPresentation__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__LeadPresentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Presentations</relationshipName>
    <type>Lookup</type>
</CustomField>