MyDemoOrg/force-app/main/default/objects/BBCRM__Presentation__c/fields/BBCRM__Url__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Url__c</fullName>
    <label>Url</label>
    <type>Url</type>
</CustomField>